--- a/assets/maps/LD31snowmangame0-3-2.json
+++ b/assets/maps/LD31snowmangame0-3-2.json
@@ -128,7 +128,7 @@
          "name":"airlockon",
          "opacity":1,
          "type":"tilelayer",
-         "visible":true,
+         "visible":false,
          "width":40,
          "x":0,
          "y":0
